# shadow-ai

./: .gitattributes  .gitignore  README.md  create_windows_icon.ps1  pubspec.yaml
.github/workflows/: android-build.yml  ios-build.yml  release.yml  windows-build.yml
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
ios/: .gitignore  Podfile  setup_llama.sh
ios/Flutter/: Debug.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist  LlamaPlugin.swift  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: app_state.dart  chat_message.dart
lib/screens/: agents_screen.dart  chat_screen.dart  home_screen.dart  image_screen.dart  models_screen.dart  settings_screen.dart  setup_screen.dart  video_screen.dart
lib/services/: background_task_service.dart  connectivity_service.dart  database_service.dart  file_reader_service.dart  llama_channel.dart  model_router.dart  storage_service.dart  stt_service.dart  tts_service.dart
lib/services/providers/: ai_provider.dart  free_provider.dart  gemini_provider.dart  huggingface_provider.dart  local_provider.dart  openrouter_provider.dart  video_provider.dart
lib/theme/: app_theme.dart
lib/widgets/: chat_input.dart  message_bubble.dart  mode_selector.dart  status_bar.dart  typing_indicator.dart
linux/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
